--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,78 @@
                   Though still nascent, **Energy DePIN** growth will likely accelerate as **2030** nears, when policymakers and corporates seek agile, decentralized solutions to meet urgent climate targets. For investors, this sector offers an early foothold in one of crypto’s most promising and **impactful** frontiers.
                 </p>
               </article>
+
+              <article class="cards__card card">
+                <h3 class="card__h3">Energy DePIN</h3>
+
+                <p class="card__p">
+                  Global energy demand is soaring—fueled by rising EV adoption, generative AI usage, and population growth—and governments aim to reach net-zero emissions by 2050. Fulfilling these climate and energy requirements calls for $21 trillion in new grid infrastructure. Traditional, centralized utility models can’t keep pace with this massive buildout, particularly as the grid becomes increasingly decentralized with the rise of rooftop solar, battery storage, and electric vehicles.
+                </p>
+
+                <p class="card__p">
+                  Decentralized Physical Infrastructure Networks (DePINs) address two core challenges: (1) how to accelerate the deployment of clean energy assets in a capital-efficient manner, and (2) how to coordinate a fast-growing network of Distributed Energy Resources (DERs). By tapping into token incentives and open-source blockchain protocols, DePINs bootstrap large-scale renewable capacity and incentivize DER owners to share real-time data for Virtual Power Plants, Demand Response Programs, and other grid services.
+                </p>
+  
+                <p class="card__p">Over time, Energy DePINs could unlock trillions of dollars in economic potential by:</p>
+  
+                <ol class="card__ol">
+                  <li class="card__li"><strong>Lowering Capital Barriers</strong>:
+                    Tokens reward early-stage deployment of solar panels, batteries, and EV chargers, spurring rapid expansion.
+                  </li>
+                  <li class="card__li"><strong>Enhancing Grid Efficiency</strong>:
+                    Real-time DER data reduces blackouts, volatility, and inefficiencies, creating new revenue streams for participants.
+                  </li>
+                  <li class="card__li"><strong>Enabling P2P Energy Markets</strong>:
+                    DePIN protocols can shift wealth from centralized utilities to consumers, potentially allowing peer-to-peer energy trading and tokenized carbon credits.
+                  </li>     
+                </ol>
+  
+                <p class="card__p">
+                  Two Project we like in this category and will look for opportunity post-TGE is Sourceful and Fuse
+                </p>
+              </article>
+            </div>
+          </div>
+        </article>
+
+
+        <article class="future__project project">
+          <h3 class="future__h3">Sourceful</h3>
+          <div class="future__cards cards">
+            <div class="cards__inner">
+              <article class="cards__card card">
+
+                <ol class="card__ol">
+                  <li class="card__li"><strong>Clear Value Proposition</strong>:
+                    Sourceful tackles one of the biggest bottlenecks in the energy market: real-time coordination of Distributed Energy Resources (DERs). By offering a hardware-first approach (the Energy Gateway IoT device) and a user-friendly mobile app, Sourceful creates a verifiable stream of data on local generation and consumption—enabling more reliable virtual power plants (VPPs) and streamlining grid integration. This solves a critical pain point for utilities and grid operators that currently lack real-time DER visibility.
+                  </li>
+                  <li class="card__li"><strong>First-Mover Advantage with Hardware</strong>:
+                    Unlike purely software-based solutions, Sourceful’s gateway device cryptographically guarantees data integrity and prevents spoofing. This positions Sourceful as a trusted, “always-on” source of verified DER data—a key differentiator in a market where trust and regulatory compliance are paramount. Hardware-based approaches can gain lasting moats because switching costs are higher once gateways are installed in homes.
+                  </li>
+                  <li class="card__li"><strong>Early Leadership in Energy DePIN</strong>:
+                    Energy DePIN is poised to become a multi-trillion-dollar segment of crypto, with real assets (solar panels, batteries, EV chargers) rapidly tokenized and monetized. Sourceful’s ability to scale its global network of gateways creates a platform effect for future VPPs, demand-response programs, and real-time carbon credit generation—unlocking multiple revenue lines in data sales, grid services, and tokenized carbon markets. An early foothold could compound into a dominant position in an emerging sector.
+                  </li>
+                  <li class="card__li"><strong>Token Incentives Drive Network Flywheel</strong>:
+                    Sourceful plans to reward customers with tokens (initially in the form of redeemable points) based on their energy data contributions. This token-fueled onboarding lowers the cost of user acquisition while building network density and delivering valuable, aggregated DER data. As more gateways come online, the network becomes increasingly attractive to utilities, corporate buyers of carbon credits, and other DePIN protocols, creating powerful flywheel effects.
+                  </li>  
+                  <li class="card__li"><strong>Global Scale & Composability</strong>:
+                    Already deployed across multiple regions, Sourceful has demonstrated its global potential. Its open, blockchain-based architecture fosters composability, meaning that new DER providers, carbon credit marketplaces, or other energy applications can plug into the Sourceful network. This sets the stage for new downstream revenue sources—like peer-to-peer energy trading, decentralized insurance, or advanced carbon markets.
+                  </li>  
+                  <li class="card__li"><strong>Roadmap Catalysts</strong>:
+                    <ul class="card__ul">
+                      <li class="card__li"><strong>Token Launch / Monetization</strong>:
+                        Transitioning points into tokens can unlock liquidity and investor interest, while also boosting user adoption.
+                      </li>
+                      <li class="card__li"><strong>VPP Partnerships</strong>:
+                        Partnerships with leading VPP operators, utilities, and large energy retailers could accelerate gateway deployment and drive meaningful revenue.
+                      </li>
+                      <li class="card__li"><strong>Peer-to-Peer Trading & Beyond</strong>:
+                        In the longer term, Sourceful’s roadmap includes P2P energy trading—a high-value use case likely to draw mainstream attention if (and when) regulation allows.
+                      </li>                    
+                    </ul>
+                  </li>  
+                </ol>
+              </article>
             </div>
           </div>
         </article>
@@ -1441,7 +1513,48 @@
           <h3 class="future__h3">Fuse</h3>
           <div class="future__cards cards">
             <div class="cards__inner">
-
+              <article class="cards__card card">
+                <h3 class="card__h3">Fuse</h3>
+                <h2 class="card__h2">Project Overview</h2>
+                <p class="card__p">
+                  Fuse is a UK-based energy startup—founded by ex-Revolut executives and backed by $90 million from Accel, Multicoin, and Ribbit Capital—that aims to accelerate the clean energy transition by operating across the entire energy stack. Unlike most energy companies that focus on one or two layers, Fuse runs utility-scale renewable power plants, offers DER (e.g., rooftop solar) installations, builds EV charging infrastructure, and supplies electricity directly to consumers.
+                </p>
+              </article>
+              <article class="cards__card card">
+                <h3 class="card__h3">Fuse</h3>
+                <h2 class="card__h2">Solving the Grid Bottleneck</h2>
+                <p class="card__p">
+                  In the UK, grid connection queues for large-scale projects can exceed 15 years, threatening climate commitments. Fuse sidesteps these delays by prioritizing Distributed Energy Resources (DERs) like rooftop solar, which can be deployed more rapidly and cheaply.
+                </p>
+              </article>
+              <article class="cards__card card">
+                <h3 class="card__h3">Fuse</h3>
+                <h2 class="card__h2">Project Zero & DePIN</h2>
+                <p class="card__p">
+                  Fuse’s Project Zero is a DePIN-based protocol that incentivizes households to install DERs and share real-time energy data. By owning both the Virtual Power Plant (VPP) layer and the DER data pipeline, Fuse can deliver superior grid services—like load balancing and demand response—while rewarding participants via token incentives.
+                </p>
+              </article>
+              <article class="cards__card card">
+                <h3 class="card__h3">Fuse</h3>
+                <h2 class="card__h2">Investment Rationale</h2>
+                <ul class="card__ul">
+                  <li class="card__li"><strong>Integrated Model</strong>:
+                    Covers generation, installation, and retail for end-to-end efficiency.
+                  </li>
+                  <li class="card__li"><strong>Immediate Market Need</strong>:
+                    Rapidly deploys DERs to bypass the UK’s multi-year grid queues.
+                  </li>
+                  <li class="card__li"><strong>Token Incentives</strong>:
+                    Aligns households, grid operators, and investors under a single platform.
+                  </li>
+                  <li class="card__li"><strong>Scalable Blueprint</strong>:
+                    Initial UK success can be replicated in other markets facing similar bottlenecks.
+                  </li>
+                </ul>
+                <p class="card__p">
+                  Fuse uniquely combines decentralized tech with a vertically integrated approach, positioning it for outsized growth in a trillion-dollar global clean energy market.
+                </p>
+              </article>
             </div>
           </div>
         </article>
