--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="body__header header">
       <div class="header__inner">
-        <img width="60" height="60" class="header__logo" src="img/ava.png" srcset="img/ava.png, img/ava@2x.png 2x" alt="DePIN logo">
+        <img width="60" height="60" class="header__logo" src="img/logo-round.svg" alt="DePIN logo">
         <ul class="header__links">
           <li class="header__link-wrapper"><a class="header__link" href="#about">About</a></li>
           <li class="header__link-wrapper"><a class="header__link" href="#portfolio">Portfolio and Thesis</a></li>
@@ -1568,7 +1568,39 @@
 
 
 
-    <footer>
+    <footer class="body__footer footer">
+      <div class="footer__inner">
+
+
+        <div class="footer__top">
+          <ul class="footer__links">
+            <li class="footer__link-wrapper">
+              <a class="footer__link" href="#about">About</a>
+            </li>
+            <li class="footer__link-wrapper">
+              <a class="footer__link" href="#portfolio">Portfolio and Thesis</a>
+            </li>
+            <li class="footer__link-wrapper">
+              <a class="footer__link" href="#future">Future Projects</a>
+            </li>
+          </ul>
+  
+          <ul class="footer__socials">
+            <li class="footer__social-wrapper">
+              <a class="footer__social-link" href="https://x.com/DePin_20_">Twitter</a>
+            </li>
+          </ul>
+        </div>
+        
+
+        <div class="footer__bottom">
+          <img width="180" height="56" class="footer__logo" src="img/logo-white.svg" alt="DePIN">
+          <p class="footer__copyright">©2024 Depin. All Rights Reserved.</p>
+        </div>
+
+
+
+      </div>
 
     </footer>
 
