--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="body__header header">
       <div class="header__inner">
-        <img width="60" height="60" class="header__logo" src="img/logo-round.svg" alt="DePIN logo">
+        <img width="54" height="54" class="header__logo" src="img/logo-nobg.svg" alt="DePIN logo">
         <ul class="header__links">
           <li class="header__link-wrapper"><a class="header__link" href="#about">About</a></li>
           <li class="header__link-wrapper"><a class="header__link" href="#portfolio">Portfolio and Thesis</a></li>
@@ -56,6 +56,11 @@
           <h1 class="hero__h1">Depin Index of 20</h1>
           <h2 class="hero__h2">Invest in tokens that have real world usage and cash flows. Its time to get real.</h2>
           <p class="hero__p">DePIN 20 is a decentralized index fund represented by a single token, <strong class="bold">$DEPIN</strong>, providing accessible exposure to the top 20 Decentralized Physical Infrastructure Network (DePIN) projects. It allows investors easy and  diversified exposure to leading compute, energy, connectivity, and data collection networks.</p>
+          <p class="hero__caption">
+            The Depin portfolio construction is weighted by our conviction and rebalanced monthly to reflect our thesis and conviction
+          </p>
+          <img class="hero__map" src="img/map.png" alt="Map of DePIN">
+          
         </div>
       </section>
 
@@ -125,7 +130,7 @@
 
       <section class="main__port port" id="portfolio">
         <div class="port__inner">
-          <h2 class="port__h2">Our Target Portfolio and Thesis</h2>
+          <h2 class="port__h2">Our Target Portfolio and&nbsp;Thesis</h2>
 
           <article class="port__project project">
             <h3 class="port__h3">Geodnet</h3>
