--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
       <section class="main__hero hero">
         <div class="hero__inner">
+          <a class="hero__h2" href="pdf/Helium Investment Thesis.pdf">Helium Investment Thesis pdf</a>
           <h1 class="hero__h1">DePin 20</h1>
           <h2 class="hero__h2">Invest in tokens that have real world usage and cash flows. Its time to get real.</h2>
           <p class="hero__p">DePIN 20 is a decentralized index fund represented by a single token, <strong class="bold">$DEPIN</strong>, providing accessible exposure to the top 20 Decentralized Physical Infrastructure Network (DePIN) projects. It allows investors easy and  diversified exposure to leading compute, energy, connectivity, and data collection networks.</p>
