--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
           <h2 class="port__h2">Our Target Portfolio and&nbsp;Thesis</h2>
 
           <div class="port__table table">
-            <div class="table__row" id="dawn" onclick="window.open('pdf/dawn.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="dawn">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/dawn.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/dawn.jpg" alt="DAWN" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/dawn.pdf', '_blank')">
                 <h3 class="table__name">DAWN</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/dawn.pdf', '_blank')">
                 <p class="table__description">
                   DAWN decentralizes last-mile internet using blockchain and fixed-wireless tech. It bypasses ISP monopolies to deliver wholesale bandwidth pricing directly to households, turning them into both consumers and resellers of internet connectivity.
                 </p>
@@ -170,14 +170,14 @@
             </div>
             
 
-            <div class="table__row" id="hellium"onclick="window.open('pdf/helium.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="hellium">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/helium.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/helium.svg" alt="Helium" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/helium.pdf', '_blank')">
                 <h3 class="table__name">Helium</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/helium.pdf', '_blank')">
                 <p class="table__description">
                   Helium is a Decentralized Wireless (DeWi) network where individuals and businesses deploy affordable hotspots for IoT and mobile connectivity. By distributing infrastructure costs among community operators rewarded with tokens, Helium builds telecom coverage through a scalable, decentralized model.
                 </p>
@@ -198,14 +198,14 @@
             </div>
 
 
-            <div class="table__row" id="glow"  onclick="window.open('pdf/glow.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="glow">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/glow.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/glow.jpg" alt="Glow Foundation" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/glow.pdf', '_blank')">
                 <h3 class="table__name">Glow Foundation</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/glow.pdf', '_blank')">
                 <p class="table__description">
                   Glow drives the shift to 100% renewable energy, empowering individuals to support solar farms and cut CO2 emissions. Each contribution earns Impact Points, tracking your role in creating a cleaner, greener planet.
                 </p>
@@ -226,14 +226,14 @@
             </div>
 
 
-            <div class="table__row" id="geodnet" onclick="window.open('pdf/geodnet.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="geodnet">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/geodnet.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/geodnet.png" alt="GEODNET" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/geodnet.pdf', '_blank')">
                 <h3 class="table__name">GEODNET</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/geodnet.pdf', '_blank')">
                 <p class="table__description">
                   GEODNET is a Decentralized Physical Infrastructure Network (DePIN) providing centimeter-level RTK corrections for GPS. With over 10,000 RTK stations deployed, it offers cost-effective, scalable positioning solutions, backed by a buy-and-burn model tying revenue directly to token value.
                 </p>
@@ -253,14 +253,14 @@
               </div>
             </div>
 
-            <div class="table__row" id="hivemapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="hivemapper">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/hivemapper.jpg" alt="Hivemapper" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
                 <h3 class="table__name">Hivemapper</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
                 <p class="table__description">
                   Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
                 </p>
@@ -281,14 +281,14 @@
             </div>
 
 
-            <div class="table__row" id="grass" onclick="window.open('pdf/grass.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="grass">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/grass.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/grass.jpg" alt="Grass" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/grass.pdf', '_blank')">
                 <h3 class="table__name">Grass</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/grass.pdf', '_blank')">
                 <p class="table__description">
                   Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
                 </p>
@@ -309,14 +309,14 @@
             </div>
 
 
-            <div class="table__row" id="io" onclick="window.open('pdf/io.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="io">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/io.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/io.jpg" alt="io.net" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/io.pdf', '_blank')">
                 <h3 class="table__name">io.net</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/io.pdf', '_blank')">
                 <p class="table__description">
                   Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
                 </p>
@@ -337,14 +337,14 @@
             </div>
 
 
-            <div class="table__row" id="sourceful" onclick="window.open('pdf/sourceful.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="sourceful">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/sourceful.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/sourceful.jpg" alt="Sourceful" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/sourceful.pdf', '_blank')">
                 <h3 class="table__name">Sourceful</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/sourceful.pdf', '_blank')">
                 <p class="table__description">
                   Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
                 </p>
@@ -364,14 +364,14 @@
               </div>
             </div>
 
-            <div class="table__row" id="fuse" onclick="window.open('pdf/fuse.pdf', '_blank')">
-              <div class="table__cell table__logo-wrapper">
+            <div class="table__row" id="fuse">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/fuse.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/fuse.jpg" alt="Fuse" class="table__logo">
               </div>
-              <div class="table__cell table__name-wrapper">
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/fuse.pdf', '_blank')">
                 <h3 class="table__name">Fuse</h3>
               </div>
-              <div class="table__cell table__description-wrapper">
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/fuse.pdf', '_blank')">
                 <p class="table__description">
                   Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
                 </p>
