--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <ul class="header__links">
           <li class="header__link-wrapper"><a class="header__link" href="#about">About</a></li>
           <li class="header__link-wrapper"><a class="header__link" href="#portfolio">Portfolio and Thesis</a></li>
+          <li class="header__link-wrapper"><a class="header__link" href="#faq">FAQ</a></li>
         </ul>
         <div class="header__mobile ">
           <button class="header__open-menu" id="open-menu" aria-label="Open menu"></button>
@@ -427,10 +428,10 @@
             </div>
             <div class="faq-item">
               <div class="faq-question" onclick="toggleFaq(this)">
-                How can I trade $KYLE?
+                How can I trade $DEPIN?
               </div>
               <div class="faq-answer" style="display: none;">
-                You can buy and sell our DAO token, $KYLE, directly on daos.fun.
+                You can buy and sell our DAO token, $DEPIN, directly on daos.fun.
               </div>
             </div>
           </div>
@@ -455,6 +456,9 @@
             <li class="footer__link-wrapper">
               <a class="footer__link" href="#portfolio">Portfolio and Thesis</a>
             </li>
+            <li class="footer__link-wrapper">
+              <a class="footer__link" href="#faq">FAQ</a>
+            </li>
           </ul>
   
           <ul class="footer__socials">
@@ -471,7 +475,9 @@
         
 
         <div class="footer__bottom">
-          <img width="180" height="56" class="footer__logo" src="img/logo-white.svg" alt="DePIN">
+          <a href="#about">
+            <img width="180" height="56" class="footer__logo" src="img/logo-white.svg" alt="DePIN">
+          </a>
           <div>
             <p class="footer__copyright">©2024 Depin. All Rights Reserved.</p>
           </div>
