--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     <header class="body__header header" id="header">
       <div class="header__inner">
-        <img width="58" height="58" class="header__logo" src="img/logo-round.svg" alt="DePIN logo">
+        <a href="#about">
+          <img width="58" height="58" class="header__logo" src="img/logo-round.svg" alt="DePIN logo">
+        </a>
         <ul class="header__links">
           <li class="header__link-wrapper"><a class="header__link" href="#about">About</a></li>
           <li class="header__link-wrapper"><a class="header__link" href="#portfolio">Portfolio and Thesis</a></li>
